<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Hospitalmanagmentandpatientsystem</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="welcome_fix">welcome</string>
    <string name="login_fix">login</string>
    <string name="register_fix">register</string>
    <string name="title_activity_loginpage">LoginpageActivity</string>
    <string name="username_fix">username</string>
    <string name="password_fix">password</string>
    <string name="title_activity_registrationpage">RegistrationpageActivity</string>
    <string name="firstname_fix">firstname</string>
    <string name="lastname_fix">lastname</string>
    <string name="email_fix">email</string>
    <string name="phoneno_fix">phoneno</string>
    <string name="address_fix">address</string>
    <string name="title_activity_patienthomepage">PatienthomepageActivity</string>
    <string name="searchbyspecialists_fix">searchbyspecialists</string>
    <string name="book_for_test_fix">book for test</string>
    <string name="book_for_rooms_fix">book for rooms</string>
    <string name="patient_records_fix">patient records</string>
    <string name="feedback_fix">feedback</string>
    <string name="title_activity_doctorshomepage">DoctorshomepageActivity</string>
    <string name="view_appointment_fix">view appointment</string>
    <string name="checkpatientrecords_fix">checkpatientrecords</string>
    <string name="view_feedback_fix">view feedback</string>
    <string name="title_activity_patientdoctorsearch">PatientdoctorsearchActivity</string>
    <string name="list_of_doctors_fix">List of doctors</string>
    <string name="doctor_id_fix">Doctor id</string>
    <string name="book_date_fix">Book date</string>
    <string name="book_now_fix">Book now</string>
    <string name="title_activity_patienthealthrecords">PatienthealthrecordsActivity</string>
    <string name="title_activity_feedback">FeedbackActivity</string>
    <string name="title_activity_bookfortest">BookfortestActivity</string>
    <string name="type_of_test_fix">Type of test</string>
    <string name="date_fix">Date</string>
    <string name="price">price</string>
    <string name="title_activity_bookrooms">BookroomsActivity</string>
    <string name="type_of_room_fix">Type of room</string>
    <string name="joining_date_fix">Joining date</string>
    <string name="price_fix">Price</string>
    <string name="booknow_fix">Booknow</string>
    <string name="patient_fix">patient</string>
    <string name="doctor_fix">doctor</string>
    <string name="title_activity_doctorsregistration">DoctorsregistrationActivity</string>
    <string name="title_activity_adminhomepage">AdminhomepageActivity</string>
    <string name="doctorshomepage_fix">doctorshomepage</string>
    <string name="patienthomepage_fix">patienthomepage</string>
    <string name="details_fix">details</string>
    <string name="patient_id_fix">patient id</string>
    <string name="large_text_fix">Large Text</string>
    <string name="doctors_id_fix">Doctors id</string>
    <string name="view_patient_records_fix">view patient records</string>
    <string name="feed_back_fix">feed back</string>
    <string name="add_doctor_fix">Add doctor</string>
    <string name="title_activity_adddoctor">Adddoctor</string>
    <string name="admin_id_fix">Admin Id:</string>
    <string name="logout_fix">logout</string>
    <string name="out_patient_fix">out patient</string>
    <string name="view_booking_fix">view booking</string>
    <string name="add_booking_fix">Add booking</string>
    <string name="title_activity_outpatientlist">Outpatientlist</string>
    <string name="patientid_fix">patientid</string>
    <string name="in_date_fix">in date</string>
    <string name="out_date_fix">out date</string>
    <string name="fees_fix">fees</string>
    <string name="submit_fix">submit</string>
    <string name="title_activity_booking">Booking</string>
    <string name="doctorsid_fix">doctorsid</string>
    <string name="title_activity_doctorsbooking">Doctorsbooking</string>
    <string name="title_activity_patientfeedback">Patientfeedback</string>
    <string name="doctors_entry_fix">Doctors entry</string>

</resources>
